# Drive_auth_edge

./: ._.gitignore  .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  Dockerfile  Dockerfile.edge  LICENSE  Makefile  README.md  SECURITY.md  TODO.txt  docker-compose.yml  driveauth_edge_roadmap.md  pyproject.toml  railway.toml  roadmap-2026-07.md  secrets.env.example  testsupport.py
.github/: PULL_REQUEST_TEMPLATE.md
architecture/: overview.md  trust-risk-separation.md
dashboard/: __init__.py  app.py  dashboard.py  fleet.py  register.py  security.py  server.py  standalone_ui.py  state.py
data/: README.md
demo/: run_demo.py
docs/: api-reference.md  biometric-data-policy.md  configuration.md  data-collection.md  install-guide.md  integration.md  key-provisioning.md  pipeline-fixes-2026-07.md  public-posts.md  review-fixes.md  secure-boot.md  security-assumptions.md  setup-and-workflow.md  stage2-per-driver.md  standalone.md  troubleshooting.md
driveauth/: __init__.py  api.py  audio_io.py  audit_log.py  config.py  consent.py  decision_engine.py  enrollment.py  escalation.py  fraud_state.py  fusion.py  geo.py  integrity.py  intent.py  key_protection.py  ood_detector.py  openrouter_client.py  orchestrator.py  perf_telemetry.py  policy.yaml  policy_engine.py  profile_store.py  purge.py  quality_gate.py  risk_model.py  secrets.py  stage2_artifacts.py  standalone_session.py  step_up_fallback.py  step_up_otp.py  template_store.py  types.py
examples/: basic_auth.py  payment_step_up.py
hardware/: __init__.py  actuation.py  ble_gatt_server.py  bluetooth_otp.py  can_logger.py  finger_daemon.py  finger_uart.py  fleet_telemetry.py  hailo_face.py  ir_capture.py  ir_liveness.py  ladder_otp.py  mic_capture.py  ota_client.py  rgb_capture.py  telematics.py
phases/: driver1_attack_side_fp_diagnosis.json  driver1_e2e_audit.json  driver1_pad_haar_diagnosis.json  driver1_pad_haar_diagnosis.md  driver1_raw_cosine_inversion_diagnosis.json  driver1_readiness_report.md  driver1_recapture_PENDING.md  driver7_e2e_audit.json  mac.txt  manual_scores_fail.json  manual_scores_happy.json  phase1.md  phase1c_afunix_pytest.txt  phase2a-mac.txt  phase2a-thor.md  phase2a-thor.txt  phase2a.md  phase2a_bio_baseline.json  phase2a_ood_eval.json  phase2b.md  phase2b_bio_eval.json  phase2b_bio_eval_opencv4.json  phase2b_calibration.json  phase2b_calibration_driver7.json  phase2b_calibration_driver7.txt  phase2b_suggested.env  phase5.md  phase6.md  phase6_sprint6.json  phase8.md  stage2_per_driver_eval.json  stage2_per_driver_report.md  thor.md  thor.txt  track_a_driver1_driver7_audit.json  track_b_live_pad.json  track_b_readiness_report.md
scripts/: ._phase1b_thor_bench.py  ._phase3_synth_demo.py  _bio_train_common.py  _launch_driver1_recapture.sh  _launch_track_b_attack_side.sh  audit_driver1_e2e.py  bootstrap.py  build_ort_cuda_thor.sh  build_update_package.py  calibrate_bio_thresholds.py  capture_dashboard_demo_gif.py  capture_own_face.py  capture_replay_screen.py  demo_preflight.sh  diagnose_attack_side_fps.py  diagnose_driver1_pad_haar.py  driver1_post_recapture_pipeline.py  eval_bio_far_frr.py  eval_ood_negatives.py  eval_stage2_per_driver.py  export_openapi.py  generate_phase3_synth.py  install.sh  (+23 more)
(+86 files in other folders)
