[project]
name = "driveauth-edge"
version = "0.2.0"
description = "DriveAuth Edge — Trust/Risk-separated vehicle biometric authorization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "cryptography>=42.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.17"]
train = ["lightgbm>=4.0", "onnxmltools>=1.12", "onnx>=1.15", "scikit-learn>=1.4", "skl2onnx>=1.16"]
voice = ["torch>=2.0", "speechbrain>=1.0"]
face = ["opencv-python>=4.8", "onnxruntime>=1.17"]
orchestrator = ["onnxruntime>=1.17", "llama-cpp-python>=0.2"]
dev = ["pytest>=8.0", "ruff>=0.15"]
dashboard = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
]
standalone = [
    "driveauth-edge[voice,face,onnx,dashboard]",
]
all = ["driveauth-edge[onnx,voice,face,orchestrator,dev,dashboard,train,standalone]"]

[project.scripts]
driveauth-demo = "demo.run_demo:main"
driveauth-dashboard = "dashboard.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["driveauth", "demo", "dashboard"]

[tool.hatch.build.targets.wheel.force-include]
"driveauth/policy.yaml" = "driveauth/policy.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
