[project]
name = "driveauth-edge"
version = "0.2.0"
description = "DriveAuth Edge — Trust/Risk-separated vehicle biometric authorization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "cryptography>=42.0",
    "PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["driveauth", "demo", "dashboard", "hardware"]

[tool.hatch.build.targets.wheel.force-include]
"driveauth/policy.yaml" = "driveauth/policy.yaml"

[project.optional-dependencies]
onnx = ["onnxruntime>=1.17"]
train = ["lightgbm>=4.0", "onnxmltools>=1.12", "onnx>=1.15", "scikit-learn>=1.4", "skl2onnx>=1.16"]
voice = ["torch>=2.0", "speechbrain>=1.0"]
face = ["opencv-python>=4.8", "onnxruntime>=1.17"]
orchestrator = ["onnxruntime>=1.17"]
dev = ["pytest>=8.0", "ruff>=0.15"]
dashboard = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
]
standalone = [
    "driveauth-edge[voice,face,onnx,dashboard]",
]
# Optional hardware extras (Pi UART finger + BlueZ Bluetooth OTP + Hailo + GPIO).
finger = ["pyfingerprint>=1.5"]
bluetooth = ["dbus-python>=1.3"]
can = ["python-can>=4.3"]
tpm = ["tpm2-pytss>=2.1"]
hailo = []  # hailo_platform is device-SDK installed; declare extra for docs/CI grouping
gpio = ["RPi.GPIO>=0.7"]
hardware = ["driveauth-edge[finger,bluetooth,gpio,face,can]"]
all = ["driveauth-edge[onnx,voice,face,orchestrator,dev,dashboard,train,standalone,hardware,tpm]"]

[project.scripts]
driveauth-demo = "demo.run_demo:main"
driveauth-dashboard = "dashboard.server:main"
driveauth-finger-daemon = "hardware.finger_daemon:run_daemon_main"
driveauth-can-logger = "hardware.can_logger:main"
driveauth-ble-gatt = "hardware.ble_gatt_server:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
